syntax = "proto3";

package erc20;

option go_package = "example.com/project/protos/fizz";

// Define messages for the requests and responses for ERC20
message DeployRequest {
  string owner = 1;
  string name = 2;
  string symbol = 3;
  string initialSupply = 4;
}

message DeployResponse {
  string contract = 1;
}

message TotalSupplyRequest {
  string contract = 1;
}

message TotalSupplyResponse {
  string totalSupply = 1;
}

message BalanceOfRequest {
  string contract = 1;
  string account = 2;
}

message BalanceOfResponse {
  string amount = 1;
}

message AllowanceRequest {
  string contract = 1;
  string owner = 2;
  string spender = 3;
}

message AllowanceResponse {
  string remainingAmount = 1;
}

message ApproveRequest {
  string contract = 1;
  string spender = 2;
  string amount = 3;
}

message ApproveResponse {
  string txhash = 1;
}

message TransferRequest {
  string contract = 1;
  string recipient = 2;
  string amount = 3;
}

message TransferResponse {
  string txhash = 1;
}

message TransferFromRequest {
  string contract = 1;
  string sender = 2;
  string recipient = 3;
  string amount = 4;
}

message TransferFromResponse {
  string txhash = 1;
}

// Define the service for ERC20
service ERC20 {
  rpc Deploy (DeployRequest) returns (DeployResponse);
  rpc TotalSupply (TotalSupplyRequest) returns (TotalSupplyResponse);
  rpc BalanceOf (BalanceOfRequest) returns (BalanceOfResponse);
  rpc Allowance (AllowanceRequest) returns (AllowanceResponse);
  rpc Approve (ApproveRequest) returns (ApproveResponse);
  rpc Transfer (TransferRequest) returns (TransferResponse);
  rpc TransferFrom (TransferFromRequest) returns (TransferFromResponse);
}
